prepare to auth